# IRONFORGE

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  ROADMAP.md  launch.ps1  pyproject.toml  requirements.txt  setup.py  start.py
.github/workflows/: ci.yml
ai_engine/: __init__.py  engine.py  system_prompt.py
assets/: __init__.py  aviation.py  capability_library.py  cyber.py  fires.py  ground.py  unit_models.py
docs/: bibliography.md
fires/: __init__.py  fscm.py  hptl.py  targeting.py
intelligence/: __init__.py  ipb.py  nai_generator.py  terrain.py  threat_templates.py  weather_effects.py
ironforge/: __init__.py  base_classes.py  constants.py  enums.py
mdmp/: __init__.py  models.py  pipeline.py  step01_receipt.py  step02_mission_analysis.py  step03_coa_development.py  step04_coa_analysis.py  step05_coa_comparison.py  step06_coa_approval.py  step07_orders_production.py
scenarios/: __init__.py  brigade_defense_peer_threat.json  contested_airspace_cas.json  cyber_physical_fob.json  multi_domain_strike.json  time_sensitive_targeting.json
tests/: __init__.py  test_assets.py  test_coa_scoring.py  test_doctrine_citations.py  test_fires.py  test_intelligence.py  test_mdmp_pipeline.py  test_opord_format.py  test_scenarios.py
webapp/backend/: __init__.py  main.py  pdf_generator.py
webapp/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
webapp/frontend/app/: globals.css  layout.tsx  page.tsx
webapp/frontend/components/: COACard.tsx  COASection.tsx  ClassificationBanner.tsx  DisclaimerModal.tsx  (+7 more)
(+2 files in other folders)
