[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ironforge"
version = "1.0.0"
description = "AI-powered Military Decision Making Process (MDMP) engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IRONFORGE Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Defense Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pytest>=8.1.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "reportlab>=4.1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.setuptools.packages.find]
exclude = ["tests*", "webapp*", "docs*", "scenarios*"]
